2003-03-26  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "yi" to ALL_LINGUAS.

2003-03-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* Makefile.am (EXTRA_DIST): Include gtk-doc.make in the
	distribution.

	* doc/api/figures/Makefile.am: Don't delete the png files when
	doing make maintainer-clean.

	* configure.in: Use the macro GTK_DOC_CHECK to check for gtk-doc.

	* Makefile.am (DISTCHECK_CONFIGURE_FLAGS): Pass --enable-gtk-doc
	to configure when making distcheck, otherwise it fails.

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): require automake 1.6.

2003-03-21  Guntupalli Karunakar  <karunakar@freeedomink.org>

	* configure.in: Added "ml" in ALL_LINGUUAS

2003-03-04  Radek Doulik  <rodo@ximian.com>

	* bonobo/bonobo-ui-engine.c (execute_state_updates):
	increase/decrease bonobo_ui_engine_inhibit_events counter
	(real_exec_verb): return if bonobo_ui_engine_inhibit_events
	counter > 0
	(real_emit_ui_event): ditto

2003-03-01  Dave Camp  <dave@ximian.com>

	* bonobo/bonobo-ui-toolbar-control-item.c: (impl_set_tooltip),
	(impl_realize), (impl_unrealize), (impl_size_allocate), (impl_map),
	(impl_unmap), (bonobo_ui_toolbar_control_item_class_init),
	(bonobo_ui_toolbar_control_item_construct): Implement tooltips
	with an input only window instead of a GtkEventBox.

2003-02-28  Michael Meeks  <michael@localhost.localdomain>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_xml_set_image):
	NULL check on text, to guard against broken client XML,
	add warning too.

2003-02-25  Rodney Dawes  <dobey@free.fr>

	* *: create gnome-2-2 branch and commit following patch to HEAD
	* bonobo/bonobo-ui-sync-toolbar.c: Move _set_border_width () call
	* bonobo/bonobo-ui-toolbar.c: Add shadow_type style property, to match
	GtkToolbar drawing
	
2003-02-21  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-14  Alex Duggan  <aldug@astrolinux.com>

	* configure.in: require gtk+ >= 2.2.0 for the
	multi-screen stuff.
